@@ -11,6 +11,8 @@ Bugs fixed:
 - 2950773 Leak in indCIMXMLHandler.c
 - 2952912 resultSockets variable is not used threadsafe
 - 2958167 Remove USE_THREADS sections of httpAdapter
+- 2952616 internalProvider is not Threadsafe
+
 
 Changes in 1.3.8
 ================
